# adaptix-insight

./: .gitignore  ARCHITECTURE.md  CUTOVER_GATES.md  DEPLOYMENT.md  FEATURES.md  IMPLEMENTATION_STATUS.md  POLYREPO_MIGRATION_CHARTER.md  PRODUCTION_AUDIT.md  README.md  REPO_OWNERSHIP.md  ROLLBACK_STANDARD.md  VERSION_COMPATIBILITY_POLICY_GLOBAL.md  WAVE_STATUS.md  docker-compose.yml
backend/: .env.example  Dockerfile  README_INSIGHT_EXTRACTION.txt  pyproject.toml
backend/adaptix_insight_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/core_app/: __init__.py  config.py  db.py  logging_config.py  main.py  models.py  schemas.py
backend/core_app/api/: __init__.py  adaptix_domain_router_common.py  adaptix_insight_router.py  analytics_router.py  auth_router.py  benchmark_router.py  commercial_router.py  data_quality_router.py  dependencies.py  forecasting_router.py  founder_router.py  founder_surface_router.py  health_router.py  ingestion_router.py  insights_router.py  kpi_router.py  metrics_router.py  pattern_router.py  report_router.py  scorecard_router.py  system_health_router.py  system_health_shell_router.py
backend/core_app/core/: __init__.py  security.py
backend/core_app/queries/: founder_finance.py
backend/core_app/services/: advanced_analytics_service.py  aggregation_service.py  benchmark_service.py  data_quality_service.py  executive_insights_service.py  extended_scorecard_service.py  forecasting_service.py  founder_finance_service.py  founder_studio_service.py  ingestion_service.py  kpi_service.py  pattern_detection_service.py  report_service.py  scorecard_service.py
backend/tests/: __init__.py  conftest.py  test_advanced_analytics.py  test_aggregation.py  test_benchmark.py  test_data_quality.py  test_executive_insights.py  test_forecasting.py  test_ingestion.py  test_kpi.py  test_pattern_detection.py  test_scorecard.py
(+27 files in other folders)
