[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adaptix-insight-backend"
version = "0.1.0"
description = "Standalone Adaptix Insight backend shell"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn>=0.30,<1",
  "pydantic>=2.7,<3",
  "prometheus-client>=0.20,<1"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["core_app*"]